# pcmanx

./: .gitignore  .travis.yml  0001-fix-gtk_pixbuf-bug.patch  AUTHORS  ChangeLog  ChangeLog.old  Doxyfile  Doxygen.in  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  pcmanx-gtk2.spec.in  pcmanx-gtk2_0.3.3.orig.tar.gz.delta  pcmanx-gtk2_0.3.3.orig.tar.gz.id  pcmanx-gtk2_0.3.4.orig.tar.gz.delta  pcmanx-gtk2_0.3.4.orig.tar.gz.id  pcmanx-gtk2_0.3.5.orig.tar.gz.delta  pcmanx-gtk2_0.3.5.orig.tar.gz.id  pcmanx-gtk2_0.3.7.orig.tar.gz.delta  pcmanx-gtk2_0.3.7.orig.tar.gz.id  pcmanx-gtk2_0.3.8.orig.tar.gz.delta  pcmanx-gtk2_0.3.8.orig.tar.gz.id  pcmanx-gtk2_0.3.9.orig.tar.gz.delta  pcmanx-gtk2_0.3.9.orig.tar.gz.id  pcmanx-gtk2_1.0.orig.tar.bz2.delta  pcmanx-gtk2_1.0.orig.tar.bz2.id  pcmanx-gtk2_1.1.orig.tar.xz.delta  pcmanx-gtk2_1.1.orig.tar.xz.id  pcmanx-gtk2_1.2.orig.tar.xz.delta  pcmanx-gtk2_1.2.orig.tar.xz.id  pcmanx-gtk2_1.3.orig.tar.xz.delta  (+5 more)
data/: Makefile.am  Makefile.in  PCManXlib.py  default.conf  default_msg.data  emoticons  example_msg.data  orz.py  pcmanx.1  sitelist
data/nancy_bot/: default.conf  default_msg.data  default_usages.data  example.conf  example_usages.data
data/script/: orz.py
debian/: README.Debian  README.source  changelog  control  copyright  libpcmanx-core0.install  mozilla-plugin-pcmanx.dirs  mozilla-plugin-pcmanx.install  mozilla-plugin-pcmanx.links  mozilla-plugin-pcmanx.postinst  mozilla-plugin-pcmanx.postrm  pcmanx-gtk2.menu  pcmanx.1  rules  watch
debian/patches/: 00list  01-fix-fcfont-null-arg.patch  always-calculate-based-on-chinese.patch  build_plugin_with_fpic.dpatch  change_default_en_font_to_mono.dpatch  force-to-old-libnotify.patch  gcc_4.3.dpatch  gcc_4.3_4.4_ftbfs.dpatch  iceape-dev.dpatch  package_name_change.dpatch  remove_image_file_in_usr_lib.dpatch  save_encoding.dpatch  series  telnet_protocol.dpatch  use_xulrunner.dpatch  xpcom_libdir.dpatch
developers/: make-new-release.sh
dist-debian/: control  copyright  docs
libltdl/: configure
plugin/: Makefile.am  Makefile.in
plugin/data/: Makefile.am  Makefile.in  TelnetProtocol.js  TelnetProtocol.js.in  pcmanx.html
plugin/src/: Makefile.am  Makefile.in  np_entry.cpp  npn_gate.cpp  npp_gate.cpp  npplat.h  npupp.h  nsScriptablePeer.cpp  nsScriptablePeer.h  pcmanx_interface.idl  plugin.cpp  plugin.h  pluginbase.h
po/: Makefile.in.in  Makevars  POTFILES.in  POTFILES.skip  pcmanx.pot  zh_CN.po  zh_TW.po
po/zh_TW/: pcmanx.po
src/: .mainframe.cpp.swp  Makefile-byhand  Makefile.am  Makefile.in  appconfig.cpp  appconfig.h  autologinpage.cpp  autologinpage.h  caret.cpp  caret.h  configfile.cpp  configfile.h  conn_xpm.xpm  dialog.cpp  dialog.h  downarticledlg.cpp  downarticledlg.h  editfavdlg.cpp  editfavdlg.h  emoticondlg.cpp  emoticondlg.h  font.cpp  font.h  generalprefpage.cpp  generalprefpage.h  inputdialog.cpp  inputdialog.h  keysettingpage.cpp  keysettingpage.h  listbox.cpp  listbox.h  mainframe.cpp  mainframe.h  notebook.cpp  notebook.h  pcmanx_gtk2.cpp  pcmanx_inverse_xpm.xpm  pcmanx_pure_gtk2.cpp  pcmanx_xpm.xpm  prefdlg.cpp  (+22 more)
src/charset/: Makefile.am  Makefile.in  uao.c  uao.h  uao241-b2u.c  uao241-u2b.c  uao241.c  uao241.h  uao250-b2u.c  uao250-u2b.c  uao250.c  uao250.h
src/core/: Makefile.am  Makefile.in  caret.cpp  caret.h  cfontconfig.cpp  cfontconfig.h  debug.h  fileutil.c  fileutil.h  font.cpp  font.h  pcmanx_utils.h  pkgver.c  proxy.c  proxy.h  site.cpp  site.h  stringutil.cpp  stringutil.h  termdata.cpp  termdata.h  termsel.cpp  termsel.h  termview.cpp  termview.h  uao.c  uao.h  uao241.c  uao241.h  uao250.c  uao250.h  view.cpp  view.h  widget.cpp  widget.h
src/docklet/: api.h  clipboard.c  eggtrayicon.c  eggtrayicon.h
src/nancy_bot/: api.h  botutil.h  main.cpp  msgdata.cpp  msgdata.h  nancybot.cpp  nancybot.h  standalone.cpp
src/notifier/: api.h  impl.c  notifier-impl.c  working_area.c  working_area.h
src/qqwryseeker/: qqwryseeker.c  qqwryseeker.h
src/script/: api.h  script.cpp
src/view/: editor.cpp  editor.h  editorview.cpp  editorview.h  forkpty.c  forkpty.h  telnetcon.cpp  telnetcon.h  telnetview.cpp  telnetview.h  termview.cpp  termview.h
